<resources>
    <string name="app_name">LifeUp</string>
    <string name="offline">Offline</string>
    <string name="sleep">Sleep</string>
    <string name="time_second">Sec</string>
    <string name="time_second_mini">s</string>
    <string name="time_minute_mini">min</string>
    <string name="time_minute">Minute</string>
    <string name="delete">Delete</string>
    <string name="delete_device">Delete Device</string>
    <string name="setting">Setting</string>
    <string name="lock">Lock</string>
    <string name="back">Back</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="save_success">Save success</string>
    <string name="unsave">Unsave</string>
    <string name="save_content">Whether to save the modifications?</string>
    <string name="not_set_floor_room">Room not set to any floor</string>
    <string name="device_offline_tips">Device is offline, please check your network</string>
    <string name="control_success">Successful</string>
    <string name="control_fail">Failed</string>
    <string name="delete_success">Deleted</string>
    <string name="success">Successful</string>
    <string name="retry_once">Try again</string>
    <string name="vicenter_default_name">Smart Hub</string>
    <string name="vicenter_online_count">Online</string>
    <string name="vicenter_device_count">Total</string>
    <string name="vicenter_offline">Smart Hub is offline</string>
    <string name="vicenter_delete_text">Remove and unbind the Hub and all devices</string>
    <string name="vicenter_delete_title">Note</string>
    <string name="vicenter_delete_content">Smart Hub and all devices bonded will be deleted together. Still want to delete the Hub?</string>
    <string name="vicenter_delete_success_content">You need to manually reset your Hub before re-add</string>
    <string name="crash_toast">System error, please try again.</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="faq_coco">COCO FAQ</string>
    <string name="launcher1_text1">Upgrade the Smart Hub </string>
    <string name="launcher1_text2">More connected devices </string>
    <string name="launcher2_text1">Linkage function</string>
    <string name="launcher2_text2">Devices are so intelligent that understand you better</string>
    <string name="launcher3_text1">Flexible accounts</string>
    <string name="launcher3_text2">Self-manage accounts</string>
    <string name="launcher4_text1">Easy Safe Comfortable</string>
    <string name="launcher4_text2">Welcome home and start new life</string>
    <string name="launcher4_text3">Start now</string>
    <string name="open_now">Get Start</string>
    <string name="launch_bottom_tip">Have a smart life everyday</string>
    <string name="more">More</string>
    <string name="times">time(s)</string>
    <string name="time_second_end_s">s</string>
    <string name="symbol_bullet">• </string>
    <string name="main_bottom_tab_device">Devices</string>
    <string name="main_bottom_tab_smart_scene">Scenes</string>
    <string name="main_bottom_tab_security">Security</string>
    <string name="main_bottom_tab_personal">More</string>
    <string name="main_exitToast">Push again to exit</string>
    <string name="device_list_bar_select_room">Move to another room</string>
    <string name="device_empty_title"> No devices currently</string>
    <string name="device_empty_toast">The room has no operable equipment</string>
    <string name="device_on">On</string>
    <string name="device_open">Open</string>
    <string name="device_off">Off</string>
    <string name="device_close">Close</string>
    <string name="device_stop">Stop</string>
    <string name="device_lock">Unlock</string>
    <string name="device_unlock">Lock</string>
    <string name="device_empty_add">Add Devices</string>
    <string name="device_empty_tip">You have not added any device, go and add it~</string>
    <string name="device_network_error">The following cases may make it impossible for remote operation：</string>
    <string name="device_network_error_">① The phone is not connected to the network;\n② The Smart Hub  does not work,such as not network connected or power off;\n③Please check on your router</string>
    <string name="device_timing_list_empty">You have not set any timer or other command</string>
    <string name="device_timing_add">Add Timer</string>
    <string name="device_timing_countdown_add">Add Timer/Countdown</string>
    <string name="device_timing_modify">Reset Timer</string>
    <string name="device_timing_action">Action</string>
    <string name="device_timing_action_set">Set to</string>
    <string name="device_timing_action_open">Open</string>
    <string name="device_timing_action_shutdown">Off</string>
    <string name="device_timing_repeat">Repeat</string>
    <string name="device_timing_repeat_monday">Monday</string>
    <string name="device_timing_repeat_tuesday">Tuesday</string>
    <string name="device_timing_repeat_wednesday">Wednesday</string>
    <string name="device_timing_repeat_thursday">Thursday</string>
    <string name="device_timing_repeat_friday">Friday</string>
    <string name="device_timing_repeat_saturday">Saturday</string>
    <string name="device_timing_repeat_sunday">Sunday</string>
    <string name="device_timing_repeat_never">Once</string>
    <string name="device_timing_repeat_everyday">Everyday</string>
    <string name="device_timing_repeat_everyweek">Everyweek</string>
    <string name="device_timing_repeat_splite">,</string>
    <string name="device_timing_action_curtain_percent">%1$s %2$s：%3$s</string>
    <string name="device_timing_action_content">Action：%1$s</string>
    <string name="device_timing_repeat_content">Repeat：%1$s</string>
    <string name="device_timing">Timer</string>
    <string name="device_timing_set_action">Setting</string>
    <string name="device_timing_action_not_set_error">Please set the action</string>
    <string name="device_timing_add_success">Timer added!</string>
    <string name="device_timing_modify_success">Timer updated successfully!</string>
    <string name="device_timing_delete_success">Timer deleted</string>
    <string name="conditioner_current_temperature">Current temperature</string>
    <string name="conditioner_set_temperature">Set temperature</string>
    <string name="conditioner_temperature_unit">℃</string>
    <string name="conditioner_temperature_unit1">℉</string>
    <string name="conditioner_cold">Cold</string>
    <string name="conditioner_hot">Hot</string>
    <string name="conditioner_lockunlock_lock">Lock</string>
    <string name="conditioner_lockunlock_unlock">Unlock</string>
    <string name="conditioner_dehumidifier">Dehumidifier</string>
    <string name="conditioner_wind">Wind</string>
    <string name="conditioner_auto">Auto</string>
    <string name="conditioner_low_wind">Weak wind</string>
    <string name="conditioner_middle_wind">Medium\nwind</string>
    <string name="conditioner_high_wind">Strong\nwind</string>
    <string name="conditioner_low">Low Speed</string>
    <string name="conditioner_middle">Middle Speed</string>
    <string name="conditioner_high">High Speed</string>
    <string name="conditioner_sweep">Up-down Swing</string>
    <string name="conditioner_stop_sweep">Stop Swing</string>
    <string name="conditioner_close">Close</string>
    <string name="conditioner_open">Open</string>
    <string name="conditioner_lock">Button locked</string>
    <string name="conditioner_power_close">Device power is off</string>
    <string name="camera">Camera</string>
    <string name="camera_disconnected_tips">Signal has been interrupted</string>
    <string name="camera_connect">Connected</string>
    <string name="camera_disconnect">Disconnected</string>
    <string name="camera_screenshot">Screenshot</string>
    <string name="camera_photo">Photo</string>
    <string name="camera_audio">Audio</string>
    <string name="camera_video">Video</string>
    <string name="camera_stop_audio">Audio off</string>
    <string name="camera_talk">Talk</string>
    <string name="camera_stop_talk">Talk off</string>
    <string name="camera_photo_success">Screenshot has been saved to the album</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="allone_userguide">User Guide</string>
    <string name="allone_userguide_tip1">1.Aim the Magic Cube at household electric appliances</string>
    <string name="allone_userguide_tip2">2.Best to test three keys</string>
    <string name="allone_userguide_tip3">3.Partial key is not easy to use</string>
    <string name="allone_userguide_tip4">4.Remote control is not easy to use</string>
    <string name="allone_userguide_tip1_content">Infrared signal for controlling electric appliance is sent by Magic Cube,So please place Magic Cube in the place where household electric appliances can receive signal directly </string>
    <string name="allone_userguide_tip2_content">Best to test more then three keys. If you find that the remote control is not easy to use, you can change the next according to tips.</string>
    <string name="allone_userguide_tip3_content">There may be some keys not match with your home remote control, it will be resolved in the subsequent version. please choose the best use of your remote control.</string>
    <string name="allone_userguide_tip4_content">It is possible that your home remote control is a new model, which will be added in later versions.</string>
    <string name="allone_userguide_tip5_content">The set of your remote control  is not successful?\n\n Please come to community of Orvibo to ask for help\n\n We will solve your problemat at the first time</string>
    <string name="rename">Rename</string>
    <string name="save_modify">Save</string>
    <string name="remote_key_name">Button name</string>
    <string name="delete_ir_key">Delete buttton</string>
    <string name="device_add">Add Device</string>
    <string name="ap_config_title">Add COCO</string>
    <string name="ap_config_tips_tip1">1.Go to "Settings-Wi-Fi" choose "alink_ORVIBO_LIVI&#8230;"</string>
    <string name="ap_config_tips_tip2">2.After connect to Wi-Fi successfully, reopen "HomeMate" app</string>
    <string name="ap_config_connect_wifi">To connect Wi-Fi</string>
    <string name="unbind_add_wifi_device_finish">Finish</string>
    <string name="user_phone">Phone</string>
    <string name="user_phone_change">Change phone numbers</string>
    <string name="user_phone_change_tip">After replacing your phone, you can use the new phone number next login, retrieve your password and to receive alarm messages.</string>
    <string name="user_phone_change_current">Current phone number：%s</string>
    <string name="user_phone_only_china">Mainland China mobile number only</string>
    <string name="sensor_to_message">Go to check</string>
    <string name="security_warning_setting_contact_edit">Edit contact</string>
    <string name="security_warning_setting_contact_name">Name</string>
    <string name="security_warning_contact_phone_empty">Please enter the phone number</string>
    <string name="security_warning_contact_name_empty">Please enter the contact name</string>
    <string name="subscribe_success_title">Reservation success</string>
    <string name="subscribe_success_content">View all the reserved programs on the reservation list.</string>
    <string name="subscribe_success_never">No longer displayed</string>
    <string name="subscribe_success_shutdown"> Close</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_agreement">Agreement</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_personal_center">Personal Centre</string>
    <string name="nav_smart_life">Smart Life</string>
</resources>