<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:navigation="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical">

    <com.orvibo.homemate.view.custom.NavigationGreenBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        navigation:text="@string/allone_userguide" />

    <LinearLayout
        android:id="@+id/guideView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_x6"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x4"
            android:layout_marginRight="@dimen/margin_x2">

            <TextView
                android:id="@+id/alloneUserGuideTip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allone_userguide_tip1"
                android:textSize="@dimen/text_big"
                android:textStyle="bold" />

            <TextView
                style="@style/normal_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alloneUserGuideTip1"
                android:layout_marginTop="@dimen/margin_x2"
                android:text="@string/allone_userguide_tip1_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x4"
            android:layout_marginRight="@dimen/margin_x2"
            android:layout_marginTop="@dimen/margin_x6">

            <TextView
                android:id="@+id/alloneUserGuideTip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allone_userguide_tip2"
                android:textSize="@dimen/text_big"
                android:textStyle="bold" />

            <TextView
                style="@style/normal_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alloneUserGuideTip2"
                android:layout_marginTop="@dimen/margin_x2"
                android:text="@string/allone_userguide_tip2_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x4"
            android:layout_marginRight="@dimen/margin_x2"
            android:layout_marginTop="@dimen/margin_x6">

            <TextView
                android:id="@+id/alloneUserGuideTip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allone_userguide_tip3"
                android:textSize="@dimen/text_big"
                android:textStyle="bold" />

            <TextView
                style="@style/normal_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alloneUserGuideTip3"
                android:layout_marginTop="@dimen/margin_x2"

                android:text="@string/allone_userguide_tip3_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x4"
            android:layout_marginRight="@dimen/margin_x2"
            android:layout_marginTop="@dimen/margin_x6">

            <TextView
                android:id="@+id/alloneUserGuideTip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allone_userguide_tip4"
                android:textSize="@dimen/text_big"
                android:textStyle="bold" />

            <TextView
                style="@style/normal_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alloneUserGuideTip4"
                android:layout_marginTop="@dimen/margin_x2"
                android:text="@string/allone_userguide_tip4_content" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedbackView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_x6"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/allone_userguide_tip5_content"
            android:textSize="@dimen/text_big" />
    </LinearLayout>
</LinearLayout>
