<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:navigation="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical">

    <com.orvibo.homemate.view.custom.NavigationTextBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        navigation:left="@string/cancel"
        navigation:middle="@string/rename"
        navigation:right="@string/delete_ir_key" />

    <TextView
        android:id="@+id/tip_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dp"
        android:paddingBottom="@dimen/padding_x2"
        android:paddingTop="@dimen/padding_x2"
        android:text="@string/remote_key_name"
        android:textColor="@color/font_black"
        android:textSize="@dimen/text_small" />

    <com.orvibo.homemate.view.custom.EditTextWithCompound
        android:id="@+id/keyName_et"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/edit_text_bg"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:textColor="@color/identity_tip"
        android:textSize="@dimen/text_normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_x2"
        android:layout_marginRight="@dimen/margin_x2"
        android:layout_marginTop="@dimen/margin_x4"
        android:background="@drawable/button_green"
        android:gravity="center"
        android:onClick="save"
        android:text="@string/save_modify"
        android:textColor="@color/white"
        android:textSize="@dimen/navigation_textsize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1" />
</LinearLayout>