<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/common_background"
    android:layout_height="match_parent">

    <com.orvibo.homemate.view.custom.NavigationCocoBar
        android:layout_width="match_parent"
        app:leftDrawableLeft="@drawable/back"
        app:centerText="@string/security_warning_setting_contact_edit"
        android:layout_height="wrap_content"/>


    <ImageView
        android:layout_width="match_parent"
        android:background="@drawable/line_divide"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="56dp"
            android:text="@string/security_warning_setting_contact_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_big"
            android:layout_marginLeft="@dimen/margin_x4"
            android:layout_height="wrap_content" />
    <com.orvibo.homemate.view.custom.EditTextWithCompound
        android:id="@+id/nameEditText"
        android:paddingLeft="@dimen/padding_x4"
        android:paddingRight="@dimen/padding_x4"
        android:hint="@string/security_warning_contact_name_empty"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_image_item_height" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:background="@drawable/line_divide"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="@dimen/list_image_item_height">

        <TextView
            android:layout_width="56dp"
            android:text="@string/user_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/text_big"
            android:layout_marginLeft="@dimen/margin_x4"
            android:layout_height="wrap_content" />
        <com.orvibo.homemate.view.custom.EditTextWithCompound
            android:id="@+id/contactEditText"
            android:paddingLeft="@dimen/padding_x4"
            android:paddingRight="@dimen/padding_x4"
            android:hint="@string/security_warning_contact_phone_empty"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_height="@dimen/list_image_item_height" />

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/bg_line"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/contactImageView"
            android:layout_width="72dp"
            android:src="@drawable/icon_mail_list_normal"
            android:scaleType="center"
            android:background="@drawable/list_item"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_x16"
        android:layout_marginLeft="@dimen/margin_x8"
        android:layout_marginRight="@dimen/margin_x8"
        android:background="@drawable/btn_login_normal"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:background="@color/gray_white"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:layout_height="wrap_content" />
</LinearLayout>